--- a/08-HTML/homework/styles.css
+++ b/08-HTML/homework/styles.css
@@ -13,6 +13,8 @@
             background-color: green;
             padding: 50px;
             border: 10px solid blue;
+            margin-top: 50px;
+            margin-left: 50px;
         }
 
         #spanId {
